--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </header>
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello! I am a passionate developer with experience in building web applications. I love solving problems and creating user-friendly designs.</p>
+        <p>Hello! My name is Prathibha....I am a passionate developer with experience in building web applications. I love solving problems and creating user-friendly designs.</p>
     </section>
     <section id="projects">
         <h2>Projects</h2>
