--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </head>
 <body>
     <header>
-        <h1>My Portfolio</h1>
+        <h1>My Portfolio super cool</h1>
         <nav>
             <a href="#about">About Me</a>
             <a href="#projects">Projects</a>
