new commit self

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <p>If you'd like to get in touch, feel free to email me at <a href="mailto:your-email@example.com">your-email@example.com</a>.</p>
     </section>
     <footer>
-        <p>&copy; 2023 My Portfolio prathibha</p>
+        <p> 2023 My Portfolio prathibha</p>
     </footer>
 </body>
 </html>
