--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio as like mee</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -12,15 +13,7 @@
             background-color: #f4f4f9;
             color: #333;
         }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 1rem 0;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-        }
+        
         nav {
             margin: 1rem 0;
         }
@@ -45,9 +38,7 @@
             width: calc(33.333% - 2rem);
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
-        .project h3 {
-            margin-top: 0;
-        }
+        
         footer {
             text-align: center;
             padding: 1rem 0;
