--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <header>
-        <h1>My Portfolio super cool</h1>
+        <h1>version 6</h1>
         <nav>
             <a href="#about">About Me</a>
             <a href="#projects">Projects</a>
